refactor: migrate to expo-media-library hook and configure granular photo permissions.

--- a/app.json
+++ b/app.json
@@ -27,6 +27,12 @@
     },
     "plugins": [
       "expo-router",
+       [
+        "expo-media-library",
+        {
+          "granularPermissions": ["photo"]
+        }
+      ],
       [
         "expo-splash-screen",
         {
