feat: Add `expo-web-browser` plugin configuration and update various Expo dependencies to their latest patch versions.

--- a/app.json
+++ b/app.json
@@ -27,10 +27,12 @@
     },
     "plugins": [
       "expo-router",
-       [
+      [
         "expo-media-library",
         {
-          "granularPermissions": ["photo"]
+          "granularPermissions": [
+            "photo"
+          ]
         }
       ],
       [
@@ -44,7 +46,8 @@
             "backgroundColor": "#000000"
           }
         }
-      ]
+      ],
+      "expo-web-browser"
     ],
     "experiments": {
       "typedRoutes": true,
